--- a/src/styles/_animations.scss
+++ b/src/styles/_animations.scss
@@ -1,3 +1,4 @@
+// language popup animation
 .slide-fade-enter-active,
 .slide-fade-leave-active {
   transition: all .3s ease;
@@ -8,14 +9,27 @@
   transform: translateY(30px);
 }
 
+// another language animation
+
 .language {
-    opacity: 0;
-    transform: translateY(30px);
+  opacity: 0;
+  transform: translateY(30px);
 }
 
 .language-trigger {
-    &:hover ~ .language {
-        opacity: 1;
-        transform: translateY(0);
-    }
+  &:hover ~ .language {
+      opacity: 1;
+      transform: translateY(0);
+  }
+}
+
+// vue router animation
+.scale-enter-active,
+.scale-leave-active {
+  transition: all 0.5s ease;
+}
+.scale-enter-from,
+.scale-leave-to {
+  opacity: 0;
+  transform: scale(0.9);
 }
